#8 add loc velo by auth
