# app/Controller/api/Velo/VeloLocByIdController.php
@@ -2,24 +2,18 @@
 
 namespace Controller\api\Velo;
 
+use Core\AuthApi;
 use OpenApi\Attributes;
 use Studoo\EduFramework\Core\Controller\ControllerInterface;
 use Studoo\EduFramework\Core\Controller\Request;
 
-class VeloByIdController implements ControllerInterface
+class VeloLocByIdController implements ControllerInterface
 {
-	#[Attributes\Get(
-        path: '/api/velo/{id}',
-        operationId: 'getVeloById',
-        summary: 'getVeloById',
-        description: 'Information du vélos, voici la structure de données
-        <ul>
-            <li>velo_id : numéro unique d’identification du vélo.</li>
-            <li>type : variable texte indiquant si le vélo est : mécanique ("mechanical") ou électrique ("ebike")</li>
-            <li>status : variable texte indiquant si le vélo est : opérationnel ("available"), en anomalie ("fail") ou en cours de réparation ("repair")</li>
-            <li>num_km_total : Nombre de kilometre</li>
-            <li>station_id_available : ID station rattaché en moment et au départ</li>
-        </ul>',
+	#[Attributes\Put(
+        path: '/api/velo/{id}/location',
+        operationId: 'getVeloLocById',
+        summary: 'getVeloLocById',
+        description: 'Location du vélo via son ID, Cette méthode permet de retirer le Vélo de la station',
     )]
     #[Attributes\Parameter(
         name: 'id',
@@ -35,12 +29,12 @@ class VeloByIdController implements ControllerInterface
             mediaType: 'application/json',
             examples: [
                 new Attributes\Examples(
-                    example: '/api/velo/245671',
-                    summary: '/api/velo/245671',
+                    example: '/api/velo/245671/location',
+                    summary: '/api/velo/245671/location',
                     value: [
                             "velo_id" => 245671,
                             "type" => "mechanical",
-                            "status" => "available",
+                            "status" => "location",
                             "num_km_total" => 234,
                             "station_id_available" => 17278902806,
                     ]
@@ -52,8 +46,12 @@ class VeloByIdController implements ControllerInterface
 	{
 		header('Content-Type: application/json');
 
-        $data = (new \Repository\VeloRepository())->getVeloById($request->get('id'));
+        if (AuthApi::checkToken($request) === false) { return json_encode("Token is not valid"); }
 
-        return json_encode($data);
+        $Velo = (new \Repository\VeloRepository())->getVeloById($request->get('id'));
+        $Velo["status"] = "location";
+        (new \Repository\VeloRepository())->update($Velo);
+
+        return json_encode($Velo);
 	}
 }
